[YYC-2025-10-07] - changed seo site url, change banner

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # These values are for local development and future automation (e.g., CI injection).
 
 # Public site URL (used for social/SEO if you add injection later)
-SITE_URL=https://illmatix.github.io/yycnetworks-static-ghwebsite
+SITE_URL=https://yycnetworks.net
 
 # Contact email to display on the site
 CONTACT_EMAIL=hello@yycnetworks.net
